pkg/check/testdata/ub/types/invalid/unknown-library-config-binding-field.ub
imports: {
  aws: 'github.com/acme/aws'
}
library-configs: {
  aws: {
    region:  'us-west-2'
    retries: 3
    typo:    true
  }
}
resources: {
  bucket: aws.bucket {
    name:    'bucket'
    retries: 3
  }
}
